correcting html checker errors

--- a/Menu.css
+++ b/Menu.css
@@ -28,7 +28,7 @@
   padding-right: 60px;
 }
 
-.Menu{
+.Menu-section{
   height: 1496px;
   background-image: url(./images/Coffee-Break.png);
   background-size: cover;
